deal with entry points [skip ci]

--- a/packages/jest-circus/package.json
+++ b/packages/jest-circus/package.json
@@ -15,7 +15,7 @@
       "default": "./build/index.js"
     },
     "./package.json": "./package.json",
-    "./runner": "./runner.js"
+    "./runner": "./build/runner.js"
   },
   "dependencies": {
     "@jest/environment": "workspace:^",
