--- a/packages/jest-runtime/package.json
+++ b/packages/jest-runtime/package.json
@@ -37,6 +37,7 @@
     "jest-resolve": "workspace:^",
     "jest-snapshot": "workspace:^",
     "jest-util": "workspace:^",
+    "semver": "^7.3.5",
     "slash": "^3.0.0",
     "strip-bom": "^4.0.0"
   },
@@ -44,6 +45,7 @@
     "@jest/test-utils": "workspace:^",
     "@types/glob": "^7.1.1",
     "@types/graceful-fs": "^4.1.3",
+    "@types/semver": "^7.1.0",
     "jest-environment-node": "workspace:^"
   },
   "engines": {
