Revert "chore(website): remove diff optimization to get a single build"
This reverts commit 2bb8e331817298f0601f3dce01f079c46abc7312.

--- a/netlify.toml
+++ b/netlify.toml
@@ -13,6 +13,10 @@
   YARN_ENABLE_GLOBAL_CACHE = "true"
   YARN_GLOBAL_FOLDER = "/opt/buildhome/.yarn_cache"
 
+[context.production]
+  # Do not build the site if there's no site-related changes
+  ignore = "git diff --quiet $CACHED_COMMIT_REF $COMMIT_REF -- website/ docs/ netlify.toml"
+
 # deploy preview build (faster config)
 [context.deploy-preview]
   command = "yarn workspace jest-website netlify:ci:deployPreview"
