fix(jest-environment-jsdom): add optional peer dependency on canvas

--- a/packages/jest-environment-jsdom/package.json
+++ b/packages/jest-environment-jsdom/package.json
@@ -29,6 +29,14 @@
   "devDependencies": {
     "@jest/test-utils": "workspace:^"
   },
+  "peerDependencies": {
+    "canvas": "^2.5.0"
+  },
+  "peerDependenciesMeta": {
+    "canvas": {
+      "optional": true
+    }
+  },
   "engines": {
     "node": "^14.15.0 || ^16.10.0 || >=18.0.0"
   },
