--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "istanbul-reports": "^3.1.3",
     "jest": "workspace:^",
     "jest-changed-files": "workspace:^",
+    "jest-diff": "workspace:^",
     "jest-junit": "^16.0.0",
     "jest-mock": "workspace:^",
     "jest-runner-tsd": "^5.0.0",
