--- a/examples/mongodb/package.json
+++ b/examples/mongodb/package.json
@@ -5,16 +5,19 @@
   "private": true,
   "dependencies": {
     "jest-environment-node": "workspace:^",
-    "mongodb": "^4.3.1",
-    "mongodb-memory-server": "^8.3.0"
+    "mongodb": "^4.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
     "@babel/preset-env": "^7.1.0",
+    "@shelf/jest-mongodb": "^4.1.0",
     "babel-jest": "workspace:^",
     "jest": "workspace:^"
   },
   "scripts": {
     "test": "jest"
+  },
+  "jest": {
+    "preset": "@shelf/jest-mongodb"
   }
 }
