--- a/packages/jest-util/package.json
+++ b/packages/jest-util/package.json
@@ -23,7 +23,7 @@
     "ci-info": "^3.2.0",
     "graceful-fs": "^4.2.9",
     "picomatch": "^2.2.3",
-    "prando": "^6.0.1"
+    "pure-rand": "^5.0.3"
   },
   "devDependencies": {
     "@types/graceful-fs": "^4.1.3",
