--- a/packages/jest-runner/package.json
+++ b/packages/jest-runner/package.json
@@ -40,6 +40,7 @@
     "source-map-support": "0.5.13"
   },
   "devDependencies": {
+    "@jest/test-utils": "workspace:^",
     "@tsd/typescript": "~4.8.2",
     "@types/exit": "^0.1.30",
     "@types/graceful-fs": "^4.1.3",
