--- a/packages/jest-util/package.json
+++ b/packages/jest-util/package.json
@@ -22,8 +22,7 @@
     "chalk": "^4.0.0",
     "ci-info": "^3.2.0",
     "graceful-fs": "^4.2.9",
-    "picomatch": "^2.2.3",
-    "pure-rand": "^5.0.3"
+    "picomatch": "^2.2.3"
   },
   "devDependencies": {
     "@types/graceful-fs": "^4.1.3",
