Revert update of default JS pattern and update e2e test to this config.

--- a/e2e/native-esm-static/package.json
+++ b/e2e/native-esm-static/package.json
@@ -6,6 +6,9 @@
   },
   "jest": {
     "testEnvironment": "node",
+    "transform": {
+      "\\.m?[jt]sx?$": "babel-jest"
+    },
     "testMatch": [
       "**/__tests__/**/*.(m)[jt]s?(x)",
       "**/?(*.)+(spec|test).(m)?[tj]s?(x)"
