feat: support subpath imports

--- a/packages/jest-resolve/package.json
+++ b/packages/jest-resolve/package.json
@@ -17,6 +17,7 @@
     "./package.json": "./package.json"
   },
   "dependencies": {
+    "@okikio/resolve.imports": "^1.0.0",
     "chalk": "^4.0.0",
     "graceful-fs": "^4.2.9",
     "jest-haste-map": "workspace:^",
