--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,7 @@
   },
   "javascript.validate.enable": false,
   "jest.jestCommandLine": "yarn jest",
+  "typescript.format.insertSpaceAfterOpeningAndBeforeClosingNonemptyBraces": false,
+  "typescript.format.semicolons": "insert",
   "typescript.tsdk": "node_modules/typescript/lib"
 }
