fix: tests and update resolve.imports to 2.0.2
one test left

--- a/packages/jest-resolve/src/__mocks__/imports/array-import/package.json
+++ b/packages/jest-resolve/src/__mocks__/imports/array-import/package.json
@@ -1,10 +1,9 @@
 {
   "name": "array-import",
   "imports": {
-    "#nested": {
+    "#array-import": {
       "import": ["./node.mjs", "./node-2.mjs"],
-      "browser": ["./not-exist.cjs", "./browser.cjs"],
-      "require": ["not-exist-package", "./node.cjs"]
+      "browser": [{ "chrome": "./chrome.cjs" }, "./browser.cjs"]
     }
   }
 }
