lint: fix lint for array-import package json

--- a/packages/jest-resolve/src/__mocks__/imports/array-import/package.json
+++ b/packages/jest-resolve/src/__mocks__/imports/array-import/package.json
@@ -2,8 +2,16 @@
   "name": "array-import",
   "imports": {
     "#array-import": {
-      "import": ["./node.mjs", "./node-2.mjs"],
-      "browser": [{ "chrome": "./chrome.cjs" }, "./browser.cjs"]
+      "import": [
+        "./node.mjs",
+        "./node-2.mjs"
+      ],
+      "browser": [
+        {
+          "chrome": "./chrome.cjs"
+        },
+        "./browser.cjs"
+      ]
     }
   }
 }
