--- a/packages/jest-config/package.json
+++ b/packages/jest-config/package.json
@@ -18,10 +18,14 @@
   },
   "peerDependencies": {
     "@types/node": "*",
+    "esbuild-register": ">=3.1.0",
     "ts-node": ">=9.0.0"
   },
   "peerDependenciesMeta": {
     "@types/node": {
+      "optional": true
+    },
+    "esbuild-register": {
       "optional": true
     },
     "ts-node": {
@@ -39,6 +43,7 @@
     "glob": "^7.1.3",
     "graceful-fs": "^4.2.9",
     "jest-circus": "workspace:^",
+    "jest-docblock": "workspace:^",
     "jest-environment-node": "workspace:^",
     "jest-get-type": "workspace:^",
     "jest-regex-util": "workspace:^",
@@ -57,6 +62,8 @@
     "@types/graceful-fs": "^4.1.3",
     "@types/micromatch": "^4.0.1",
     "@types/parse-json": "^4.0.0",
+    "esbuild": "^0.15.0",
+    "esbuild-register": "^3.1.0",
     "semver": "^7.3.5",
     "ts-node": "^10.5.0",
     "typescript": "^4.8.2"
