chore: add some missing dev dependencies

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@typescript-eslint/parser": "^5.14.0",
     "ansi-regex": "^5.0.1",
     "ansi-styles": "^5.0.0",
+    "babel-jest": "workspace:^",
     "camelcase": "^6.2.0",
     "chalk": "^4.0.0",
     "chokidar": "^3.3.0",
@@ -58,6 +59,7 @@
     "jest-serializer-ansi-escapes": "^2.0.1",
     "jest-silent-reporter": "^0.5.0",
     "jest-snapshot": "workspace:^",
+    "jest-util": "workspace:^",
     "jest-watch-typeahead": "^2.2.0",
     "jquery": "^3.2.1",
     "js-yaml": "^4.1.0",
