--- a/packages/jest-message-util/package.json
+++ b/packages/jest-message-util/package.json
@@ -33,7 +33,8 @@
   "devDependencies": {
     "@types/babel__code-frame": "^7.0.0",
     "@types/graceful-fs": "^4.1.3",
-    "@types/micromatch": "^4.0.1"
+    "@types/micromatch": "^4.0.1",
+    "tempy": "^1.0.0"
   },
   "publishConfig": {
     "access": "public"
