--- a/packages/jest-reporters/package.json
+++ b/packages/jest-reporters/package.json
@@ -51,6 +51,7 @@
     "@types/node-notifier": "^8.0.0",
     "jest-resolve": "workspace:^",
     "mock-fs": "^5.1.2",
+    "node-notifier": "^10.0.0",
     "tsd-lite": "^0.6.0"
   },
   "peerDependencies": {
