--- a/packages/jest-worker/package.json
+++ b/packages/jest-worker/package.json
@@ -23,6 +23,7 @@
     "supports-color": "^8.0.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.0.0",
     "@tsd/typescript": "^4.9.0",
     "@types/merge-stream": "^1.1.2",
     "@types/supports-color": "^8.1.0",
