fix: fix coverage

--- a/e2e/vmscript-coverage/package.json
+++ b/e2e/vmscript-coverage/package.json
@@ -1,6 +1,9 @@
 {
   "jest": {
     "rootDir": "./",
-    "testEnvironment": "node"
+    "testEnvironment": "node",
+    "collectCoverageFrom": [
+      "package/**/*.js"
+    ]
   }
 }
