--- a/e2e/coverage-provider-v8/no-sourcemap/package.json
+++ b/e2e/coverage-provider-v8/no-sourcemap/package.json
@@ -6,6 +6,9 @@
     "transform": {
       "\\.[jt]sx?$": "babel-jest",
       "\\.css$": "<rootDir>/cssTransform.js"
-    }
+    },
+    "coveragePathIgnorePatterns": [
+      "cssTransform\\.js"
+    ]
   }
 }
