--- a/tsconfig.typetest.json
+++ b/tsconfig.typetest.json
@@ -1,12 +1,9 @@
 {
-  "extends": "./tsconfig.json",
+  "extends": "@tsconfig/node14/tsconfig.json",
   "compilerOptions": {
-    "composite": false,
-    "emitDeclarationOnly": false,
     "noEmit": true,
     "noUnusedLocals": false,
     "noUnusedParameters": false,
-    "skipLibCheck": true,
 
     "types": []
   }
