--- a/tsconfig.typetest.json
+++ b/tsconfig.typetest.json
@@ -4,6 +4,8 @@
     "noEmit": true,
     "noUnusedLocals": false,
     "noUnusedParameters": false,
+    /* This needs to be false so our types are possible to consume without setting this */
+    "esModuleInterop": false,
 
     "types": []
   }
