--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -46,8 +46,14 @@ jobs:
         run: yarn --immutable
       - name: build
         run: yarn build
-      - name: typecheck debug
-        run: yarn tsc --version
+      - name: ts integration
+        run: yarn test-ts --selectProjects ts-integration
+      - name: type tests
+        run: yarn test-ts --selectProjects type-tests
+      - name: verify TypeScript@4.3 compatibility
+        run: yarn verify-old-ts
+      - name: typecheck examples
+        run: yarn typecheck:examples
       - name: typecheck tests
         run: yarn typecheck:tests
       - name: run ESLint with type info
