--- a/examples/snapshot/package.json
+++ b/examples/snapshot/package.json
@@ -3,8 +3,7 @@
   "version": "0.0.0",
   "name": "example-snapshot",
   "dependencies": {
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react": "18.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
