--- a/packages/jest-mock/package.json
+++ b/packages/jest-mock/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@jest/types": "workspace:^",
+		"@jest/expect-utils": "workspace:^",
     "@types/node": "*",
     "jest-util": "workspace:^"
   },
