--- a/packages/jest-mock/tsconfig.json
+++ b/packages/jest-mock/tsconfig.json
@@ -6,5 +6,9 @@
   },
   "include": ["./src/**/*"],
   "exclude": ["./**/__tests__/**/*"],
-  "references": [{"path": "../expect-utils"}, {"path": "../jest-types"}, {"path": "../jest-util"}]
+  "references": [
+    {"path": "../expect-utils"},
+    {"path": "../jest-types"},
+    {"path": "../jest-util"}
+  ]
 }
