Remove pnpapi from types

--- a/packages/jest-core/tsconfig.json
+++ b/packages/jest-core/tsconfig.json
@@ -2,7 +2,8 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "rootDir": "src",
-    "outDir": "build"
+    "outDir": "build",
+    "types": ["node"]
   },
   "include": ["./src/**/*"],
   "exclude": ["./**/__tests__/**/*"],
