Add e2e test for runCore

--- a/e2e/run-programmatically/package.json
+++ b/e2e/run-programmatically/package.json
@@ -2,5 +2,8 @@
   "name": "run-programmatically",
   "version": "1.0.0",
   "dependencies": {},
-  "jest": {}
+  "jest": {
+    "testEnvironment": "node",
+    "maxWorkers": 1
+  }
 }
