Update e2e test for programmatic run

--- a/e2e/run-programmatically-multiple-projects/package.json
+++ b/e2e/run-programmatically-multiple-projects/package.json
@@ -2,5 +2,11 @@
   "name": "runcli-multiple-projects",
   "version": "1.0.0",
   "dependencies": {},
-  "jest": {}
+  "jest": {
+    "maxWorkers": 1,
+    "projects": [
+      "<rootDir>/server",
+      "<rootDir>/client"
+    ]
+  }
 }
