--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -58,5 +58,5 @@ workflows:
           name: test-node-partial-<< matrix.node-version >>
           matrix:
             parameters:
-              node-version: ['14', '16', '18', '19']
+              node-version: ['14', '16', '18', '19', '20']
       - test-jest-jasmine
