--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
     "promise": "^8.0.2",
     "read-pkg": "^5.2.0",
     "resolve": "^1.20.0",
-    "rimraf": "^3.0.0",
+    "rimraf": "^5.0.0",
     "semver": "^7.3.5",
     "slash": "^3.0.0",
     "string-length": "^4.0.1",
@@ -84,14 +84,14 @@
     "which": "^3.0.0"
   },
   "scripts": {
-    "build-clean": "rimraf './packages/*/build' './packages/*/dist' './packages/*/tsconfig.tsbuildinfo' './packages/*/api-extractor.json' './api-extractor.json'",
+    "build-clean": "rimraf --glob './packages/*/build' './packages/*/dist' './packages/*/tsconfig.tsbuildinfo' './packages/*/api-extractor.json' './api-extractor.json'",
     "build": "yarn build:js && yarn build:ts && yarn bundle:ts",
     "build:js": "node ./scripts/build.mjs",
     "build:ts": "node ./scripts/buildTs.mjs",
     "bundle:ts": "node ./scripts/bundleTs.mjs",
     "check-changelog": "node ./scripts/checkChangelog.mjs",
     "check-copyright-headers": "node ./scripts/checkCopyrightHeaders.mjs",
-    "clean-all": "yarn clean-e2e && yarn build-clean && rimraf './packages/*/node_modules' && rimraf './node_modules'",
+    "clean-all": "yarn clean-e2e && yarn build-clean && rimraf --glob './packages/*/node_modules' && rimraf './node_modules'",
     "clean-e2e": "node ./scripts/cleanE2e.mjs",
     "crowdin:upload": "echo 'Uploading sources to Crowdin' && crowdin upload sources --config ./crowdin.yaml",
     "crowdin:download": "echo 'Downloading translations from Crowdin' && crowdin download --config ./crowdin.yaml",
