--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,8 @@
 {
+  "$schema": "https://json.schemastore.org/tsconfig",
   "extends": "@tsconfig/node14/tsconfig.json",
   "compilerOptions": {
+    "module": "commonjs",
     "composite": true,
     "declaration": true,
     "emitDeclarationOnly": true,
