--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     "node-notifier": "^10.0.0",
     "p-limit": "^3.1.0",
     "pkg-dir": "^5.0.0",
-    "prettier": "3.0.0-alpha.11",
+    "prettier": "3.0.0",
     "promise": "^8.0.2",
     "read-pkg": "^5.2.0",
     "resolve": "^1.20.0",
