--- a/packages/babel-plugin-jest-hoist/package.json
+++ b/packages/babel-plugin-jest-hoist/package.json
@@ -32,7 +32,7 @@
     "@types/babel__template": "^7.0.2",
     "@types/node": "*",
     "babel-plugin-tester": "^11.0.2",
-    "prettier": "3.0.0-alpha.11"
+    "prettier": "3.0.0"
   },
   "publishConfig": {
     "access": "public"
