--- a/packages/babel-plugin-jest-hoist/package.json
+++ b/packages/babel-plugin-jest-hoist/package.json
@@ -31,8 +31,9 @@
     "@babel/preset-typescript": "^7.0.0",
     "@types/babel__template": "^7.0.2",
     "@types/node": "*",
+    "@types/prettier": "^2.1.5",
     "babel-plugin-tester": "^11.0.2",
-    "prettier": "3.0.0"
+    "prettier": "^2.1.1"
   },
   "publishConfig": {
     "access": "public"
