--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "eslint-plugin-jsdoc": "^46.0.0",
     "eslint-plugin-local": "link:./.eslintplugin",
     "eslint-plugin-markdown": "^3.0.0",
-    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-prettier": "^5.0.0-alpha.2",
     "execa": "^5.0.0",
     "find-process": "^1.4.1",
     "glob": "^8.0.0",
