Revert "remove default config"
This reverts commit b307fb0c2333ac67c79b38733c1bac80e0c194c9.

--- a/package.json
+++ b/package.json
@@ -128,6 +128,7 @@
     "bracketSpacing": false,
     "proseWrap": "never",
     "singleQuote": true,
+    "trailingComma": "all",
     "arrowParens": "avoid",
     "overrides": [
       {
