feat: optimize code

--- a/packages/jest-changed-files/tsconfig.json
+++ b/packages/jest-changed-files/tsconfig.json
@@ -4,5 +4,8 @@
     "rootDir": "src",
     "outDir": "build"
   },
-  "include": ["./src/**/*"]
+  "include": ["./src/**/*"],
+  "references": [
+    {"path": "../jest-util"}
+  ]
 }
