--- a/packages/jest-changed-files/tsconfig.json
+++ b/packages/jest-changed-files/tsconfig.json
@@ -5,7 +5,5 @@
     "outDir": "build"
   },
   "include": ["./src/**/*"],
-  "references": [
-    {"path": "../jest-util"}
-  ]
+  "references": [{"path": "../jest-util"}]
 }
