--- a/packages/jest-worker/package.json
+++ b/packages/jest-worker/package.json
@@ -19,8 +19,7 @@
   "dependencies": {
     "@types/node": "*",
     "jest-util": "workspace:^",
-    "merge-stream": "^2.0.0",
-    "supports-color": "^8.0.0"
+    "merge-stream": "^2.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
