--- a/packages/create-jest/tsconfig.json
+++ b/packages/create-jest/tsconfig.json
@@ -5,7 +5,5 @@
     "outDir": "build"
   },
   "include": ["./src/**/*"],
-  "references": [
-    {"path": "../jest-cli"}
-  ]
+  "references": [{"path": "../jest-cli"}]
 }
