chore: upgrade node version

--- a/packages/jest-worker/package.json
+++ b/packages/jest-worker/package.json
@@ -33,7 +33,7 @@
     "worker-farm": "^1.6.0"
   },
   "engines": {
-    "node": "^14.15.0 || ^16.10.0 || >=18.0.0"
+    "node": "^16.10.0 || >=18.0.0 <19.0.0 || >=20.0.0"
   },
   "publishConfig": {
     "access": "public"
