--- a/package.json
+++ b/package.json
@@ -168,7 +168,7 @@
     "logo": "https://opencollective.com/jest/logo.txt"
   },
   "engines": {
-    "node": "^14.15.0 || ^16.10.0 || >=18.0.0"
+    "node": "^16.10.0 || >=18.0.0 <19.0.0 || >=20.0.0"
   },
   "resolutions": {
     "@types/node": "~14.14.45",
