--- a/packages/create-jest/package.json
+++ b/packages/create-jest/package.json
@@ -20,12 +20,21 @@
     "./bin/create-jest": "./bin/create-jest.js"
   },
   "dependencies": {
-    "jest-cli": "workspace:^"
+    "@jest/types": "workspace:^",
+    "chalk": "^4.0.0",
+    "graceful-fs": "^4.2.9",
+    "jest-config": "workspace:^",
+    "jest-util": "workspace:^",
+    "prompts": "^2.0.1"
   },
   "engines": {
     "node": "^14.15.0 || ^16.10.0 || >=18.0.0"
   },
   "publishConfig": {
     "access": "public"
+  },
+  "devDependencies": {
+    "@types/graceful-fs": "^4.1.3",
+    "@types/prompts": "^2.0.1"
   }
 }
