--- a/packages/create-jest/tsconfig.json
+++ b/packages/create-jest/tsconfig.json
@@ -5,5 +5,10 @@
     "outDir": "build"
   },
   "include": ["./src/**/*"],
-  "references": [{"path": "../jest-cli"}]
+  "exclude": ["./**/__tests__/**/*"],
+  "references": [
+    {"path": "../jest-config"},
+    {"path": "../jest-types"},
+    {"path": "../jest-util"}
+  ]
 }
