--- a/packages/create-jest/tsconfig.json
+++ b/packages/create-jest/tsconfig.json
@@ -8,6 +8,7 @@
   "exclude": ["./**/__tests__/**/*"],
   "references": [
     {"path": "../jest-config"},
+    {"path": "../jest-core"},
     {"path": "../jest-types"},
     {"path": "../jest-util"}
   ]
