fix: Remove `bin` from exports

--- a/packages/create-jest/package.json
+++ b/packages/create-jest/package.json
@@ -16,8 +16,7 @@
       "types": "./build/index.d.ts",
       "default": "./build/index.js"
     },
-    "./package.json": "./package.json",
-    "./bin/create-jest": "./bin/create-jest.js"
+    "./package.json": "./package.json"
   },
   "dependencies": {
     "@jest/core": "workspace:^",
