fix: dep version

--- a/packages/expect/package.json
+++ b/packages/expect/package.json
@@ -34,7 +34,7 @@
     "tsd-lite": "^0.7.0"
   },
   "engines": {
-    "node": "^16.10.0 || >=18.0.0 <19.0.0 || >=20.0.0"
+    "node": "^16.10.0 || ^18.0.0 || >=20.0.0"
   },
   "publishConfig": {
     "access": "public"
