--- a/packages/babel-preset-jest/package.json
+++ b/packages/babel-preset-jest/package.json
@@ -20,7 +20,7 @@
     "@babel/core": "^7.0.0"
   },
   "engines": {
-    "node": "^16.10.0 || >=18.0.0 <19.0.0 || >=20.0.0"
+    "node": "^16.10.0 || ^18.0.0 || >=20.0.0"
   },
   "publishConfig": {
     "access": "public"
