--- a/packages/jest-config/package.json
+++ b/packages/jest-config/package.json
@@ -62,7 +62,7 @@
     "typescript": "^5.0.4"
   },
   "engines": {
-    "node": "^16.10.0 || >=18.0.0 <19.0.0 || >=20.0.0"
+    "node": "^16.10.0 || ^18.0.0 || >=20.0.0"
   },
   "publishConfig": {
     "access": "public"
