--- a/packages/jest-environment/package.json
+++ b/packages/jest-environment/package.json
@@ -23,7 +23,7 @@
     "jest-mock": "workspace:^"
   },
   "engines": {
-    "node": "^16.10.0 || >=18.0.0 <19.0.0 || >=20.0.0"
+    "node": "^16.10.0 || ^18.0.0 || >=20.0.0"
   },
   "publishConfig": {
     "access": "public"
