--- a/packages/jest-leak-detector/package.json
+++ b/packages/jest-leak-detector/package.json
@@ -24,7 +24,7 @@
     "@types/node": "*"
   },
   "engines": {
-    "node": "^16.10.0 || >=18.0.0 <19.0.0 || >=20.0.0"
+    "node": "^16.10.0 || ^18.0.0 || >=20.0.0"
   },
   "publishConfig": {
     "access": "public"
