--- a/packages/jest-repl/package.json
+++ b/packages/jest-repl/package.json
@@ -40,7 +40,7 @@
     "jest-runtime": "./bin/jest-runtime-cli.js"
   },
   "engines": {
-    "node": "^16.10.0 || >=18.0.0 <19.0.0 || >=20.0.0"
+    "node": "^16.10.0 || ^18.0.0 || >=20.0.0"
   },
   "publishConfig": {
     "access": "public"
