--- a/packages/jest-schemas/package.json
+++ b/packages/jest-schemas/package.json
@@ -20,7 +20,7 @@
     "@sinclair/typebox": "^0.27.8"
   },
   "engines": {
-    "node": "^16.10.0 || >=18.0.0 <19.0.0 || >=20.0.0"
+    "node": "^16.10.0 || ^18.0.0 || >=20.0.0"
   },
   "publishConfig": {
     "access": "public"
