--- a/packages/jest-validate/package.json
+++ b/packages/jest-validate/package.json
@@ -28,7 +28,7 @@
     "@types/yargs": "^17.0.8"
   },
   "engines": {
-    "node": "^16.10.0 || >=18.0.0 <19.0.0 || >=20.0.0"
+    "node": "^16.10.0 || ^18.0.0 || >=20.0.0"
   },
   "publishConfig": {
     "access": "public"
