--- a/packages/jest/package.json
+++ b/packages/jest/package.json
@@ -32,7 +32,7 @@
   },
   "bin": "./bin/jest.js",
   "engines": {
-    "node": "^16.10.0 || >=18.0.0 <19.0.0 || >=20.0.0"
+    "node": "^16.10.0 || ^18.0.0 || >=20.0.0"
   },
   "repository": {
     "type": "git",
