--- a/packages/create-jest/package.json
+++ b/packages/create-jest/package.json
@@ -19,15 +19,13 @@
     "./package.json": "./package.json"
   },
   "dependencies": {
-    "@jest/core": "workspace:^",
     "@jest/types": "workspace:^",
     "chalk": "^4.0.0",
     "exit": "^0.1.2",
     "graceful-fs": "^4.2.9",
     "jest-config": "workspace:^",
     "jest-util": "workspace:^",
-    "prompts": "^2.0.1",
-    "yargs": "^17.3.1"
+    "prompts": "^2.0.1"
   },
   "engines": {
     "node": "^14.15.0 || ^16.10.0 || >=18.0.0"
@@ -38,7 +36,6 @@
   "devDependencies": {
     "@types/exit": "^0.1.30",
     "@types/graceful-fs": "^4.1.3",
-    "@types/prompts": "^2.0.1",
-    "@types/yargs": "^17.0.8"
+    "@types/prompts": "^2.0.1"
   }
 }
