--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "@types/babel__generator": "^7.0.0",
     "@types/babel__template": "^7.0.2",
     "@types/node": "~14.14.45",
+    "@types/react": "17.0.62",
+    "@types/react-dom": "^17.0.20",
     "@types/which": "^3.0.0",
+    "@types/ws": "8.5.1",
     "@typescript-eslint/eslint-plugin": "^5.14.0",
     "@typescript-eslint/parser": "^5.14.0",
     "ansi-regex": "^5.0.1",
