--- a/website/package.json
+++ b/website/package.json
@@ -37,6 +37,7 @@
     "@docusaurus/plugin-pwa": "^2.0.0",
     "@docusaurus/preset-classic": "^2.0.0",
     "@docusaurus/remark-plugin-npm2yarn": "^2.0.0",
+    "@mendable/search": "^0.0.156",
     "clsx": "^2.0.0",
     "docusaurus-remark-plugin-tab-blocks": "^1.2.0",
     "react": "^17.0.2",
