chore: group tsd dep updates

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -8,6 +8,10 @@
     {
       "matchPackageNames": ["@tsd/typescript", "typescript"],
       "groupName": "typescript"
+    },
+    {
+      "matchPackageNames": ["jest-runner-tsd", "tsd-lite"],
+      "groupName": "tsd"
     }
   ]
 }
