--- a/website/package.json
+++ b/website/package.json
@@ -49,7 +49,7 @@
     "@babel/core": "^7.11.6",
     "@crowdin/cli": "^3.5.2",
     "@docusaurus/module-type-aliases": "0.0.0-5658",
-    "@tsconfig/docusaurus": "^1.0.5",
+    "@docusaurus/tsconfig": "0.0.0-5658",
     "@types/react": "^18.2.21",
     "graphql": "^16.3.0",
     "graphql-request": "^6.0.0",
