--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/babel__template": "^7.0.2",
     "@types/node": "~14.14.45",
     "@types/which": "^3.0.0",
+    "@types/ws": "8.5.1",
     "@typescript-eslint/eslint-plugin": "^5.14.0",
     "@typescript-eslint/parser": "^5.14.0",
     "ansi-regex": "^5.0.1",
@@ -172,6 +173,7 @@
   },
   "resolutions": {
     "@types/node": "~14.14.45",
+    "@types/react": "^18.2.21",
     "ansi-escapes/type-fest": "^2.0.0",
     "babel-jest": "workspace:^",
     "jest": "workspace:^",
