use patch instead

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -13,6 +13,9 @@ packageExtensions:
   "@svgr/core@*":
     peerDependencies:
       "@babel/core": ^7.1.6
+  psl@*:
+    dependencies:
+      punycode: ^2.1.1
   react-native@*:
     peerDependencies:
       "@babel/preset-env": ^7.1.6
