--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,7 +1,7 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": ["config:base"],
-  "lockFileMaintenance": {"enabled": true, "automerge": true},
+  "lockFileMaintenance": {"enabled": true, "automerge": false},
   "rangeStrategy": "replace",
   "postUpdateOptions": ["yarnDedupeHighest"],
   "packageRules": [
