--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@types/babel__core": "^7.1.14",
     "@types/babel__generator": "^7.0.0",
     "@types/babel__template": "^7.0.2",
-    "@types/node": "~14.14.45",
+    "@types/node": "^16.10.0",
     "@types/which": "^3.0.0",
     "@types/ws": "8.5.1",
     "@typescript-eslint/eslint-plugin": "^5.14.0",
@@ -170,10 +170,10 @@
     "logo": "https://opencollective.com/jest/logo.txt"
   },
   "engines": {
-    "node": "^14.15.0 || ^16.10.0 || >=18.0.0"
+    "node": "^16.10.0 || ^18.12.0 || >=20.0.0"
   },
   "resolutions": {
-    "@types/node": "~14.14.45",
+    "@types/node": "~16.18.0",
     "@types/react": "^18.2.21",
     "ansi-escapes/type-fest": "^2.0.0",
     "babel-jest": "workspace:^",
