--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,6 +6,10 @@ on:
       os:
         required: true
         type: string
+      shards:
+        required: true
+        default: "['1/4', '2/4', '3/4', '4/4']"
+        type: string
 
 jobs:
   test:
@@ -13,13 +17,7 @@ jobs:
       fail-fast: false
       matrix:
         node-version: [16.x, 18.x, 20.x]
-        include:
-          - os: ${{ inputs.os == 'ubuntu-latest' }}
-            shard: ['1/4', '2/4', '3/4', '4/4']
-          - os: ${{ inputs.os == 'windows-latest' }}
-            shard: ['1/4', '2/4', '3/4', '4/4']
-          - os: ${{ inputs.os == 'macos-latest' }}
-            shard: ['1/3', '2/3', '3/3']
+        shard: ${{ github.event.inputs.shards }}
     name: Node v${{ matrix.node-version }} on ${{ inputs.os }} (${{ matrix.shard }})
     runs-on: ${{ inputs.os }}
 
@@ -46,24 +44,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        include:
-          - os: ${{ inputs.os == 'ubuntu-latest' }}
-            shard:
-              - '1/4'
-              - '2/4'
-              - '3/4'
-              - '4/4'
-          - os: ${{ inputs.os == 'windows-latest' }}
-            shard:
-              - '1/4'
-              - '2/4'
-              - '3/4'
-              - '4/4'
-          - os: ${{ inputs.os == 'macos-latest' }}
-            shard:
-              - '1/3'
-              - '2/3'
-              - '3/3'
+        shard: ${{ github.event.inputs.shards }}
     name: Node LTS on ${{ inputs.os }} using jest-jasmine2 (${{ matrix.shard }})
     runs-on: ${{ inputs.os }}
 
