--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -21,6 +21,7 @@ jobs:
       fail-fast: false
       matrix:
         shard: ['1/3', '2/3', '3/3']
+    name: macOS with shard ${{ matrix.shard }}
     with:
       os: macos-latest
       shard: ${{ matrix.shard }}
