--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -124,18 +124,36 @@ jobs:
   test-ubuntu:
     uses: ./.github/workflows/test.yml
     needs: prepare-yarn-cache-ubuntu
+    strategy:
+      fail-fast: false
+      matrix:
+        shard: ['1/4', '2/4', '3/4', '4/4']
+    name: Ubuntu with shard ${{ matrix.shard }}
     with:
       os: ubuntu-latest
+      shard: ${{ matrix.shard }}
   test-macos:
     uses: ./.github/workflows/test.yml
     needs: prepare-yarn-cache-macos
+    strategy:
+      fail-fast: false
+      matrix:
+        shard: ['1/3', '2/3', '3/3']
+    name: macOS with shard ${{ matrix.shard }}
     with:
       os: macos-latest
+      shard: ${{ matrix.shard }}
   test-windows:
     uses: ./.github/workflows/test.yml
     needs: prepare-yarn-cache-windows
+    strategy:
+      fail-fast: false
+      matrix:
+        shard: ['1/4', '2/4', '3/4', '4/4']
+    name: Windows with shard ${{ matrix.shard }}
     with:
       os: windows-latest
+      shard: ${{ matrix.shard }}
 
   test-leak:
     name: Node LTS on Ubuntu with leak detection
