--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,6 +6,9 @@ on:
       os:
         required: true
         type: string
+      shard:
+        required: true
+        type: string
 
 jobs:
   test:
@@ -13,8 +16,7 @@ jobs:
       fail-fast: false
       matrix:
         node-version: [16.x, 18.x, 20.x]
-        shard: ['1/4', '2/4', '3/4', '4/4']
-    name: Node v${{ matrix.node-version }} on ${{ inputs.os }} (${{ matrix.shard }})
+    name: Node v${{ matrix.node-version }}
     runs-on: ${{ inputs.os }}
 
     steps:
@@ -34,14 +36,10 @@ jobs:
         id: cpu-cores
         uses: SimenB/github-actions-cpu-cores@v2
       - name: run tests
-        run: yarn test-ci-partial:parallel --max-workers ${{ steps.cpu-cores.outputs.count }} --shard=${{ matrix.shard }}
+        run: yarn test-ci-partial:parallel --max-workers ${{ steps.cpu-cores.outputs.count }} --shard=${{ inputs.shard }}
 
   test-jasmine:
-    strategy:
-      fail-fast: false
-      matrix:
-        shard: ['1/4', '2/4', '3/4', '4/4']
-    name: Node LTS on ${{ inputs.os }} using jest-jasmine2 (${{ matrix.shard }})
+    name: Node LTS using jest-jasmine2
     runs-on: ${{ inputs.os }}
 
     steps:
@@ -61,4 +59,4 @@ jobs:
         id: cpu-cores
         uses: SimenB/github-actions-cpu-cores@v2
       - name: run tests using jest-jasmine
-        run: yarn jest-jasmine-ci --max-workers ${{ steps.cpu-cores.outputs.count }} --shard=${{ matrix.shard }}
+        run: yarn jest-jasmine-ci --max-workers ${{ steps.cpu-cores.outputs.count }} --shard=${{ inputs.shard }}
