--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "@babel/preset-typescript": "^7.0.0",
     "@babel/register": "^7.0.0",
     "@crowdin/cli": "^3.5.2",
-    "@jest/globals": "workspace:^",
-    "@jest/test-utils": "workspace:^",
+    "@jest/globals": "workspace:*",
+    "@jest/test-utils": "workspace:*",
     "@lerna-lite/cli": "1.13.0",
     "@microsoft/api-extractor": "^7.35.0",
     "@tsconfig/node16": "^16.1.0",
@@ -25,7 +25,7 @@
     "@typescript-eslint/parser": "^6.6.0",
     "ansi-regex": "^5.0.1",
     "ansi-styles": "^5.0.0",
-    "babel-jest": "workspace:^",
+    "babel-jest": "workspace:*",
     "babel-loader": "^8.2.3",
     "camelcase": "^6.2.0",
     "chalk": "^4.0.0",
@@ -50,15 +50,15 @@
     "istanbul-lib-coverage": "^3.0.0",
     "istanbul-lib-report": "^3.0.0",
     "istanbul-reports": "^3.1.3",
-    "jest": "workspace:^",
-    "jest-changed-files": "workspace:^",
+    "jest": "workspace:*",
+    "jest-changed-files": "workspace:*",
     "jest-junit": "^16.0.0",
-    "jest-mock": "workspace:^",
+    "jest-mock": "workspace:*",
     "jest-runner-tsd": "^6.0.0",
     "jest-serializer-ansi-escapes": "^2.0.1",
     "jest-silent-reporter": "^0.5.0",
-    "jest-snapshot": "workspace:^",
-    "jest-util": "workspace:^",
+    "jest-snapshot": "workspace:*",
+    "jest-util": "workspace:*",
     "jest-watch-typeahead": "^2.2.0",
     "jquery": "^3.2.1",
     "js-yaml": "^4.1.0",
@@ -178,9 +178,9 @@
     "@types/node": "~16.18.0",
     "@types/react": "^18.2.21",
     "ansi-escapes/type-fest": "^2.0.0",
-    "babel-jest": "workspace:^",
-    "jest": "workspace:^",
-    "jest-environment-node": "workspace:^",
+    "babel-jest": "workspace:*",
+    "jest": "workspace:*",
+    "jest-environment-node": "workspace:*",
     "psl": "patch:psl@npm:^1.9.0#./.yarn/patches/psl-npm-1.9.0-a546edad1a.patch",
     "ts-node@^10.5.0": "patch:ts-node@npm:^10.5.0#./.yarn/patches/ts-node-npm-10.9.1-6c268be7f4.patch"
   },
