--- a/packages/babel-jest/package.json
+++ b/packages/babel-jest/package.json
@@ -18,17 +18,17 @@
     "./package.json": "./package.json"
   },
   "dependencies": {
-    "@jest/transform": "workspace:^",
+    "@jest/transform": "workspace:*",
     "@types/babel__core": "^7.1.14",
     "babel-plugin-istanbul": "^6.1.1",
-    "babel-preset-jest": "workspace:^",
+    "babel-preset-jest": "workspace:*",
     "chalk": "^4.0.0",
     "graceful-fs": "^4.2.9",
     "slash": "^3.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
-    "@jest/test-utils": "workspace:^",
+    "@jest/test-utils": "workspace:*",
     "@types/graceful-fs": "^4.1.3"
   },
   "peerDependencies": {
