--- a/packages/babel-preset-jest/package.json
+++ b/packages/babel-preset-jest/package.json
@@ -13,7 +13,7 @@
     "./package.json": "./package.json"
   },
   "dependencies": {
-    "babel-plugin-jest-hoist": "workspace:^",
+    "babel-plugin-jest-hoist": "workspace:*",
     "babel-preset-current-node-syntax": "^1.0.0"
   },
   "peerDependencies": {
