--- a/packages/jest-circus/package.json
+++ b/packages/jest-circus/package.json
@@ -18,23 +18,23 @@
     "./runner": "./build/runner.js"
   },
   "dependencies": {
-    "@jest/environment": "workspace:^",
-    "@jest/expect": "workspace:^",
-    "@jest/test-result": "workspace:^",
-    "@jest/types": "workspace:^",
+    "@jest/environment": "workspace:*",
+    "@jest/expect": "workspace:*",
+    "@jest/test-result": "workspace:*",
+    "@jest/types": "workspace:*",
     "@types/node": "*",
     "chalk": "^4.0.0",
     "co": "^4.6.0",
     "dedent": "^1.0.0",
     "is-generator-fn": "^2.0.0",
-    "jest-each": "workspace:^",
-    "jest-matcher-utils": "workspace:^",
-    "jest-message-util": "workspace:^",
-    "jest-runtime": "workspace:^",
-    "jest-snapshot": "workspace:^",
-    "jest-util": "workspace:^",
+    "jest-each": "workspace:*",
+    "jest-matcher-utils": "workspace:*",
+    "jest-message-util": "workspace:*",
+    "jest-runtime": "workspace:*",
+    "jest-snapshot": "workspace:*",
+    "jest-util": "workspace:*",
     "p-limit": "^3.1.0",
-    "pretty-format": "workspace:^",
+    "pretty-format": "workspace:*",
     "pure-rand": "^6.0.0",
     "slash": "^3.0.0",
     "stack-utils": "^2.0.3"
