--- a/packages/babel-plugin-jest-hoist/package.json
+++ b/packages/babel-plugin-jest-hoist/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@babel/template": "^7.3.3",
     "@babel/types": "^7.3.3",
+    "@prettier/sync": "^0.3.0",
     "@types/babel__core": "^7.1.14",
     "@types/babel__traverse": "^7.0.6"
   },
