--- a/packages/jest-core/tsconfig.json
+++ b/packages/jest-core/tsconfig.json
@@ -2,8 +2,7 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "rootDir": "src",
-    "outDir": "build",
-    "types": ["node"]
+    "outDir": "build"
   },
   "include": ["./src/**/*"],
   "exclude": ["./**/__tests__/**/*"],
