--- a/website/package.json
+++ b/website/package.json
@@ -38,7 +38,7 @@
     "@docusaurus/preset-classic": "3.0.0-rc.0",
     "@docusaurus/remark-plugin-npm2yarn": "3.0.0-rc.0",
     "clsx": "^2.0.0",
-    "docusaurus-remark-plugin-tab-blocks": "^2.0.0-beta",
+    "docusaurus-remark-plugin-tab-blocks": "^2.0.0-rc.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-github-btn": "^1.3.0",
