--- a/website/package.json
+++ b/website/package.json
@@ -32,13 +32,14 @@
     ]
   },
   "dependencies": {
-    "@docusaurus/core": "^3.0.0-beta.0",
+    "@docusaurus/core": "3.0.0-rc.0",
     "@docusaurus/plugin-client-redirects": "3.0.0-rc.0",
     "@docusaurus/plugin-pwa": "3.0.0-rc.0",
     "@docusaurus/preset-classic": "3.0.0-rc.0",
     "@docusaurus/remark-plugin-npm2yarn": "3.0.0-rc.0",
     "clsx": "^2.0.0",
     "docusaurus-remark-plugin-tab-blocks": "^2.0.0-rc.0",
+    "prism-react-renderer": "^2.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-github-btn": "^1.3.0",
