fix: add ESM exports of all modules manually

--- a/packages/create-jest/package.json
+++ b/packages/create-jest/package.json
@@ -14,6 +14,7 @@
   "exports": {
     ".": {
       "types": "./build/index.d.ts",
+      "import": "./build/index.mjs",
       "default": "./build/index.js"
     },
     "./package.json": "./package.json",
