--- a/packages/jest-cli/package.json
+++ b/packages/jest-cli/package.json
@@ -7,6 +7,7 @@
   "exports": {
     ".": {
       "types": "./build/index.d.ts",
+      "import": "./build/index.mjs",
       "default": "./build/index.js"
     },
     "./package.json": "./package.json",
