--- a/packages/jest-regex-util/package.json
+++ b/packages/jest-regex-util/package.json
@@ -18,6 +18,7 @@
   "exports": {
     ".": {
       "types": "./build/index.d.ts",
+      "import": "./build/index.mjs",
       "default": "./build/index.js"
     },
     "./package.json": "./package.json"
