--- a/packages/babel-jest/package.json
+++ b/packages/babel-jest/package.json
@@ -13,6 +13,7 @@
   "exports": {
     ".": {
       "types": "./build/index.d.ts",
+      "import": "./build/index.mjs",
       "default": "./build/index.js"
     },
     "./package.json": "./package.json"
