refactor: remove unessesary config

--- a/e2e/run-programmatically/package.json
+++ b/e2e/run-programmatically/package.json
@@ -2,8 +2,5 @@
   "name": "run-programmatically",
   "version": "1.0.0",
   "dependencies": {},
-  "jest": {
-    "testEnvironment": "node",
-    "maxWorkers": 1
-  }
+  "jest": {}
 }
