--- a/packages/jest-types/package.json
+++ b/packages/jest-types/package.json
@@ -25,7 +25,8 @@
     "@types/istanbul-reports": "^3.0.0",
     "@types/node": "*",
     "@types/yargs": "^17.0.8",
-    "chalk": "^4.0.0"
+    "chalk": "^4.0.0",
+    "jest-regex-util": "workspace:*"
   },
   "devDependencies": {
     "@tsd/typescript": "^5.0.4",
