--- a/packages/jest-pattern/tsconfig.json
+++ b/packages/jest-pattern/tsconfig.json
@@ -6,9 +6,5 @@
   },
   "include": ["./src/**/*"],
   "exclude": ["./**/__tests__/**/*"],
-  "references": [
-    {"path": "../jest-pattern"},
-    {"path": "../jest-regex-util"},
-    {"path": "../jest-schemas"}
-  ]
+  "references": [{"path": "../jest-regex-util"}]
 }
