--- a/packages/jest-reporters/package.json
+++ b/packages/jest-reporters/package.json
@@ -40,6 +40,7 @@
     "v8-to-istanbul": "^9.0.1"
   },
   "devDependencies": {
+    "@jest/pattern": "workspace:*",
     "@jest/test-utils": "workspace:*",
     "@tsd/typescript": "^5.0.4",
     "@types/exit": "^0.1.30",
@@ -50,7 +51,6 @@
     "@types/istanbul-lib-source-maps": "^4.0.0",
     "@types/istanbul-reports": "^3.0.0",
     "@types/node-notifier": "^8.0.0",
-    "jest-pattern": "workspace:*",
     "jest-resolve": "workspace:*",
     "mock-fs": "^5.1.2",
     "node-notifier": "^10.0.0",
