--- a/packages/jest-config/package.json
+++ b/packages/jest-config/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "@babel/core": "^7.11.6",
+    "@jest/pattern": "workspace:*",
     "@jest/test-sequencer": "workspace:*",
     "@jest/types": "workspace:*",
     "babel-jest": "workspace:*",
@@ -43,7 +44,6 @@
     "jest-circus": "workspace:*",
     "jest-environment-node": "workspace:*",
     "jest-get-type": "workspace:*",
-    "jest-pattern": "workspace:*",
     "jest-regex-util": "workspace:*",
     "jest-resolve": "workspace:*",
     "jest-runner": "workspace:*",
