--- a/packages/jest-pattern/package.json
+++ b/packages/jest-pattern/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "jest-pattern",
-  "version": "30.0.0-alpha.3",
+  "name": "@jest/pattern",
+  "version": "30.0.0-alpha.4",
   "repository": {
     "type": "git",
     "url": "https://github.com/jestjs/jest.git",
