--- a/packages/jest-types/tsconfig.json
+++ b/packages/jest-types/tsconfig.json
@@ -5,10 +5,5 @@
     "outDir": "build"
   },
   "include": ["./src/**/*"],
-  "exclude": ["./**/__tests__/**/*"],
-  "references": [
-    {"path": "../jest-pattern"},
-    {"path": "../jest-regex-util"},
-    {"path": "../jest-schemas"}
-  ]
+  "references": [{"path": "../jest-pattern"}, {"path": "../jest-schemas"}]
 }
