--- a/packages/jest-config/package.json
+++ b/packages/jest-config/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "@babel/core": "^7.11.6",
+    "@jest/pattern": "workspace:*",
     "@jest/test-sequencer": "workspace:*",
     "@jest/types": "workspace:*",
     "babel-jest": "workspace:*",
