--- a/packages/jest-core/package.json
+++ b/packages/jest-core/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@jest/console": "workspace:*",
+    "@jest/pattern": "workspace:*",
     "@jest/reporters": "workspace:*",
     "@jest/test-result": "workspace:*",
     "@jest/transform": "workspace:*",
