--- a/packages/jest-pattern/package.json
+++ b/packages/jest-pattern/package.json
@@ -1,13 +1,10 @@
 {
-  "name": "@jest/types",
+  "name": "@jest/pattern",
   "version": "30.0.0-alpha.4",
   "repository": {
     "type": "git",
     "url": "https://github.com/jestjs/jest.git",
-    "directory": "packages/jest-types"
-  },
-  "engines": {
-    "node": "^16.10.0 || ^18.12.0 || >=20.0.0"
+    "directory": "packages/jest-pattern"
   },
   "license": "MIT",
   "main": "./build/index.js",
@@ -15,18 +12,18 @@
   "exports": {
     ".": {
       "types": "./build/index.d.ts",
+      "require": "./build/index.js",
+      "import": "./build/index.mjs",
       "default": "./build/index.js"
     },
     "./package.json": "./package.json"
   },
   "dependencies": {
-    "@jest/pattern": "workspace:*",
-    "@jest/schemas": "workspace:*",
-    "@types/istanbul-lib-coverage": "^2.0.0",
-    "@types/istanbul-reports": "^3.0.0",
     "@types/node": "*",
-    "@types/yargs": "^17.0.8",
-    "chalk": "^4.0.0"
+    "jest-regex-util": "workspace:*"
+  },
+  "engines": {
+    "node": "^16.10.0 || ^18.12.0 || >=20.0.0"
   },
   "publishConfig": {
     "access": "public"
