--- a/packages/jest-pattern/tsconfig.json
+++ b/packages/jest-pattern/tsconfig.json
@@ -5,5 +5,6 @@
     "outDir": "build"
   },
   "include": ["./src/**/*"],
-  "references": [{"path": "../jest-pattern"}, {"path": "../jest-schemas"}]
+  "exclude": ["./**/__tests__/**/*"],
+  "references": [{"path": "../jest-regex-util"}]
 }
