Adhere to lint rule: re-order keys

--- a/packages/expect/package.json
+++ b/packages/expect/package.json
@@ -18,8 +18,8 @@
     },
     "./package.json": "./package.json",
     "./build/matchers": "./build/matchers.js",
-    "./build/toThrowMatchers": "./build/toThrowMatchers.js",
-    "./build/spyMatchers": "./build/spyMatchers.js"
+    "./build/spyMatchers": "./build/spyMatchers.js",
+    "./build/toThrowMatchers": "./build/toThrowMatchers.js"
   },
   "dependencies": {
     "@jest/expect-utils": "workspace:*",
