chore(jest-types): replace `chalk` with `picocolors`

--- a/packages/jest-types/package.json
+++ b/packages/jest-types/package.json
@@ -26,7 +26,7 @@
     "@types/istanbul-reports": "^3.0.0",
     "@types/node": "*",
     "@types/yargs": "^17.0.8",
-    "chalk": "^4.0.0"
+    "picocolors": "^1.1.1"
   },
   "publishConfig": {
     "access": "public"
